Just some fun changes :)
- Added some unit tests
- Refactored JSONElement to JSONElement<interface> & JSONElementImpl<class>
- removed TestProgram & test.txt
- other cleanup