@@ -1,65 +1,69 @@
 package xyz.victorolaitan.easyjson;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
+import java.util.List;
 
 public class DatabaseHelper {
 
-    public static <T> T deserializeClass(Class<T> aClass, EasyJSON jsonStructure) throws EasyJSONException {
-        return deserializeClass(aClass, jsonStructure.getRootNode());
+    public static <T> T deserializeToClass(Class<T> aClass, EasyJSON jsonStructure) throws EasyJSONException {
+        return deserializeToClass(aClass, jsonStructure.getRootNode());
     }
 
-    public static <T> T deserializeClass(Class<T> aClass, JSONElement jsonElement) throws EasyJSONException {
-        T instance = null;
+    private static <T> T deserializeToClass(Class<T> aClass, JSONElement jsonElement) throws EasyJSONException {
+        T instance;
         try {
-            instance = aClass.newInstance();
-        } catch (InstantiationException e) {
+            instance = aClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             throw new EasyJSONException(EasyJSONException.INSTANTIATION_ERROR, e);
         } catch (IllegalAccessException e) {
             throw new EasyJSONException(EasyJSONException.ILLEGAL_ACCESS, e);
         }
-        deserializeInstance(instance, jsonElement);
+        deserializeToInstance(instance, jsonElement);
         return instance;
     }
 
-    public static <T> void deserializeInstance(T instance, EasyJSON jsonStructure) throws EasyJSONException {
-        deserializeInstance(instance, jsonStructure.getRootNode());
+    public static <T> void deserializeToInstance(T instance, EasyJSON jsonStructure) throws EasyJSONException {
+        deserializeToInstance(instance, jsonStructure.getRootNode());
     }
 
-    public static <T> void deserializeInstance(T instance, JSONElement jsonElement) throws EasyJSONException {
-        for (int i = 0; i < jsonElement.getChildren().size(); i++) {
-            JSONElement child = (JSONElement) jsonElement.getChildren().get(i);
-
+    private static <T> void deserializeToInstance(T instance, JSONElement jsonElement) throws EasyJSONException {
+        for (JSONElement childElement : jsonElement) {
             try {
-                if (child.getKey() != null) {
-                    Field field = instance.getClass().getDeclaredField(child.getKey());
-                    field.setAccessible(true);
-                    switch (child.getType()) {
-                        case PRIMITIVE:
-                            field.set(instance, child.getValue());
-                            break;
-                        case ARRAY:
-                            field.set(instance, extractArrayElements(child));
-                            break;
-                        case STRUCTURE:
-                            field.set(instance, deserializeClass(field.getType(), child));
-                            break;
-                        case ROOT:
-                            break;
-                    }
+                Field field = instance.getClass().getDeclaredField(childElement.getKey());
+                field.setAccessible(true);
+                switch (childElement.getType()) {
+                    case PRIMITIVE:
+                        field.set(instance, childElement.getValue());
+                        break;
+                    case ARRAY:
+                        if (field.getType().isAssignableFrom(List.class)) {
+                            field.set(
+                                    instance,
+                                    extractArrayElements(childElement)
+                            );
+                        }
+                        break;
+                    case STRUCTURE:
+                        field.set(instance, deserializeToClass(field.getType(), childElement));
+                        break;
+                    case ROOT:
+                        break;
                 }
             } catch (IllegalAccessException e) {
                 throw new EasyJSONException(EasyJSONException.ILLEGAL_ACCESS, e);
             } catch (NoSuchFieldException e) {
                 throw new EasyJSONException(EasyJSONException.FIELD_NOT_FOUND, e);
+            } catch (InstantiationException e) {
+                throw new EasyJSONException(EasyJSONException.INSTANTIATION_ERROR, e);
             }
         }
     }
 
-    private static ArrayList extractArrayElements(JSONElement jsonElement) {
-        ArrayList values = new ArrayList();
-        for (int i = 0; i < jsonElement.getChildren().size(); i++) {
-            JSONElement e = (JSONElement) jsonElement.getChildren().get(i);
+    private static List<?> extractArrayElements(JSONElement arrayElement) throws IllegalAccessException, InstantiationException {
+        List<Object> values = new ArrayList<>();
+        for (JSONElement e : arrayElement) {
             values.add(e.getValue());
         }
         return values;
@@ -81,36 +85,43 @@ public class DatabaseHelper {
         return serialize(null, aClass, sourceElement, excludeFields);
     }
 
-    private static <T> JSONElement serialize(T instance, Class tClass, JSONElement sourceElement, Object... excludeFields) throws EasyJSONException {
+    private static <T> JSONElement serialize(T instance, Class<? extends T> tClass, JSONElement sourceElement, Object... excludeFields) throws EasyJSONException {
         for (Field field : tClass.getDeclaredFields()) {
-            if (!excludeContains(field, instance, excludeFields)) {
-                try {
+            try {
+                if (!excludeContains(field, instance, excludeFields)) {
                     Object fieldValue = field.get(instance);
-                    Class enclosingClass = fieldValue.getClass().getEnclosingClass();
+                    Class<?> enclosingClass = fieldValue.getClass().getEnclosingClass();
                     if (enclosingClass != null && enclosingClass.equals(tClass)) {
-                        sourceElement.putStructure(field.getName(),
-                                serialize(fieldValue, fieldValue.getClass(), EasyJSON.create().getRootNode(), excludeFields));
-                    } else if (fieldValue instanceof ArrayList) {
-                        sourceElement.putArray(field.getName(), ((ArrayList) fieldValue).toArray());
+                        // typeof fieldValue == some subclass of tClass
+                        sourceElement.putStructure(
+                                field.getName(),
+                                serialize(fieldValue, fieldValue.getClass(), EasyJSON.create().getRootNode(), excludeFields)
+                        );
+                    } else if (fieldValue instanceof List) {
+                        // typeof fieldValue == List<?>
+                        sourceElement.putArray(field.getName(), ((List<?>) fieldValue).toArray());
                     } else {
+                        // typeof fieldValue == some class implementing .toString()
                         sourceElement.putPrimitive(field.getName(), fieldValue);
                     }
-                } catch (Exception ignored) {
                 }
+            } catch (IllegalAccessException e) {
+                throw new EasyJSONException(EasyJSONException.ILLEGAL_ACCESS, e);
             }
         }
         return sourceElement;
     }
 
-    private static boolean excludeContains(Field field, Object instance, Object... excludeFields) {
+    private static boolean excludeContains(Field field, Object instance, Object... excludeFields) throws IllegalAccessException {
+        Object fieldValue;
+        try {
+            fieldValue = field.get(instance);
+        } catch (NullPointerException ignored) {
+            return true; // all instance fields in a static context are excluded
+        }
         for (Object e : excludeFields) {
-            try {
-                // fml
-                Object value = field.get(instance);
-                if (value == e) {
-                    return true;
-                }
-            } catch (Exception ignored) {
+            if (fieldValue == e) {
+                return true;
             }
         }
         return false;
